Fixed margin issue on Mobile view where layout.tpl.html buttons crunched up against the host profile and event details in other views. Edited main.scss layout.tpl.html and _host-page.scss. Removed margin-top from profile details div in _host-page.scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -184,6 +184,15 @@ textarea {
 	margin: 2vw auto;
 }
 
+.layoutBox{
+  margin-bottom: 1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 95vw;
+}
+
 .navBar {
 	// border: solid red 1px;
 	display: flex;
@@ -287,5 +296,11 @@ footer {
 .navFadeIn { 
     -webkit-animation-name: fadeIn; 
     animation-name: fadeIn; 
+}
+
+@media screen and (max-width: 500px){
+  .layoutBox{
+    margin-bottom: 3vw;    
+  }
 }
 
